# ObsidianSQL

./: CMakeLists.txt  Makefile  README.md  main.cpp  test_input.sql
src/: ast.hpp  catalog.hpp  colors.hpp  execution.cpp  execution.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
